Fix some html bugs

--- a/source/options.html
+++ b/source/options.html
@@ -25,12 +25,12 @@
 				<div class="clear"></div>
 			</li>
 			<li>
-				<label class="section" for="rpc">RPC Path</label>
+				<label class="section" for="rpcPath">RPC Path</label>
 				<input id="rpcPath" type="text" />
 				<div class="clear"></div>
 			</li>
 			<li>
-				<label class="section" for="web">Web Path</label>
+				<label class="section" for="webPath">Web Path</label>
 				<input id="webPath" type="text" />
 				<div class="clear"></div>
 			</li>
@@ -107,7 +107,7 @@
 					<div class="options">
 						<input id="dlpopup" type="checkbox" />
 						<label for="dlpopup">Show download popup</label><br><br>
-						<label for="customdirs"><b>Custom Directories</b><br>Add custom directories below. These custom directories will show up in the download popup.</label>
+						<label><b>Custom Directories</b><br>Add custom directories below. These custom directories will show up in the download popup.</label>
 						<table id="customdirs">
 							<tr>
 								<th>Label</th>
