Add option to change popup refresh interval
Also refactored how the default settings are stored/created for better
readability/functionality, plus some minor cleanup

--- a/source/options.html
+++ b/source/options.html
@@ -82,6 +82,20 @@
 				</select>
 				<div class="clear"></div>
 			</li>
+			<li>
+				<label class="section" for="popuprefreshinterval">
+					Popup Refresh Interval<br />
+					<span class="small">(how often the popup is refreshed)</span>
+				</label>
+				<select id="popuprefreshinterval">
+					<option value="100">100ms</option>
+					<option value="1000">1s</option>
+					<option value="3000">3s</option>
+					<option value="10000">10s</option>
+					<option value="30000">30s</option>
+				</select>
+				<div class="clear"></div>
+			</li>
 		</ul>
 	</fieldset>
 	<fieldset>
