Fix & improve filtering
Filtering based on status had some wrong indexes and filtering status
codes - correct these based on the existing RPC docs.

Added another category for filtering called 'active' which simply
includes anything that's not stopped - fixes issue #10.

I have some concerns that my removal of any reference to TORRENT_ERROR
may have some issues down the track, but none arose in testing and it
frees up the -1 value to match all torrents rather than filtering.

--- a/source/popup.html
+++ b/source/popup.html
@@ -26,10 +26,11 @@
 				<div id="filter_clear"></div>
 			</div>
 			<select id="filter_type">
-				<option value="0">All</option>
+				<option value="-1">All</option>
+				<option value="1,2,3,4,5,6">Active</option>
 				<option value="4">Downloading</option>
-				<option value="8">Seeding</option>
-				<option value="16">Paused/Completed</option>
+				<option value="6">Seeding</option>
+				<option value="0">Paused/Completed</option>
 			</select>
 		</div>
 		<div id="status">No torrents</div>
