Add option to add torrents in paused state. Needs testing.

--- a/source/options.html
+++ b/source/options.html
@@ -103,6 +103,16 @@
 		<ul>
 			<li>
 				<fieldset>
+					<legend>Defaults</legend>
+					<div class="options">
+						<input id="start_paused" name="start_paused" type="checkbox" />
+						<label for="start_paused">Add torrent in Paused state</label><br />
+					</div>
+					<div class="clear"></div>
+				</fieldset>
+			</li>
+			<li>
+				<fieldset>
 					<legend>Default Click Action</legend>
 					<div class="options">
 						<input id="dlremote" name="clickaction" type="radio" />
